@@ -5,6 +5,13 @@ ChangeLog
    tools/widl/client.c
    tools/widl/server.c
 
+- Dereference type declarations properly.
+
+2006-02-27 ekohl
+
+   tools/widl/client.c
+   tools/widl/server.c
+
 - Move proc string offset calculation to a separate function.
 - Replace all __FUNCTION__ by __FILE__.
 
